experimenting with WordPress: Updated hosting options and improved layout

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="row mt-4" v-if="currentTab === 'multimedia'">
                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/convert-video-using-handbrake/assets/multimedia-thumbnail.png" class="img-fluid rounded-1" alt="">
                     </div>
@@ -173,7 +173,7 @@
                 </div>
                                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm shadow-sm cursor-pointer" onclick="location.href='./blog-pages/ffmpeg-installation/ffmpeg-installation.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/convert-video-using-handbrake/assets/multimedia-thumbnail.png" class="img-fluid rounded-1" alt="">
                     </div>
@@ -248,7 +248,7 @@
                  <div class="row" v-if="currentTab === 'web-dev'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/web-cam-streaming/web-streaming-docs-webrtc.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/web-cam-streaming/assets/waldemar-VAoSKP_ocN0-unsplash.jpg" class="img-fluid rounded-1" alt="">
                     </div>
@@ -275,7 +275,7 @@
 
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/use-video-stored-in-drive-on-html/use-video-stored-in-google-drive-in-html.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/use-video-stored-in-drive-on-html/assets/kelly-sikkema-DIg2s3htXEE-unsplash.jpg" class="img-fluid rounded-1" alt="">
                     </div>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/embed-gifs-in-html-from-google-drive/embed-gifs-in-html-from-google-drive.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/embed-gifs-in-html-from-google-drive/assets/ph-m-nh-t-v-4C7dniwlw-unsplash.jpg" class="img-fluid rounded-1" alt="">
                     </div>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/deployment/name-cheap/how-to-set-custom-domain-to-github-pages-using-namecheap.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/deployment/name-cheap/assets/thumbnail-github-and-namecheap.png" class="img-fluid rounded-1" alt="logoes of github and namecheap">
                     </div>
@@ -345,7 +345,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/wordpress/affordable-wordpress-hosting-in-2025.html'">
                      <div class="card-img-container">
                       <img src="./blog-pages/wordpress/assets/souvik-banerjee--WPrNEM_6dg-unsplash.jpg" class="img-fluid rounded-1" alt="logoes of github and namecheap">
                     </div>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/wordpress/learing-and-experimenting-wordpress.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/wordpress/assets/souvik-banerjee--WPrNEM_6dg-unsplash.jpg" class="img-fluid rounded-1" alt="wordpress app image">
                     </div>
@@ -414,7 +414,7 @@
                  <div class="row" v-if="currentTab === 'social-media'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/instagram/instagram-algorithm-for-new-accounts-tips-and-stragegy.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/instagram/assets/solen-feyissa-KWZa42a1kds-unsplash.jpg" class="img-fluid rounded-1" alt="instagram logo">
                     </div>
@@ -438,7 +438,7 @@
                 <div class="row" v-if="currentTab === 'digital-marketing'">
                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm" onclick="location.href='./blog-pages/digital-marketing/seo/top-free-seo-keyword-analysis-tools-2025.html'">
                     <div class="card-img-container">
                       <img src="./blog-pages/digital-marketing/assets/merakist-l5if0iQfV4c-unsplash.jpg" class="img-fluid rounded-1" alt="github image">
                     </div>
