--- a/blog-pages/wordpress/learing-and-experimenting-wordpress.html
+++ b/blog-pages/wordpress/learing-and-experimenting-wordpress.html
@@ -36,7 +36,7 @@
   </script>
 
 </head>
-<body>
+<body class="pt-5">
              <div class="shadow fixed-top z-max bg-white">
           <nav class="navbar navbar-expand-lg container-lg">
             <div class="container-fluid">
