--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
                         :class="{'bg-primary text-white': currentTab === 'freelancing', 'text-black border border-primary': currentTab !== 'freelancing'}"
                         href @click.prevent="SwitchTab('freelancing')">Freelancing</a>
                     </li>
+                     <li class="nav-item">
+                      <a
+                        class="text-black border border-primary rounded-2 text-decoration-none px-5 py-2"
+                        :class="{'bg-primary text-white': currentTab === 'automotive', 
+                        'text-black border border-primary': currentTab !== 'freelancing'}"
+                        href @click.prevent="SwitchTab('automotive')">Automotive</a>
+                    </li>
                   </ul>
                   <!-- v-scope value can be omitted -->
 
@@ -485,6 +492,30 @@
                     </p>
                     <a
                       href="./blog-pages/freelancing/freelance-business-models.html"
+                      
+                      class="btn btn-outline-primary btn-sm px-4">Read</a>
+                  </div>
+                </div>
+                </div>
+                <!-- automobile -->
+                <div class="row" v-if="currentTab === 'automotive'">
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                  <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/automobile/byds-revolutionary-2000-km-Hybrid-Engine.html'">
+                    <div class="card-img-container">
+                      <img src="https://images.unsplash.com/photo-1555215695-3004980ad54e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="img-fluid rounded-1" alt="github image">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-4">BYD's Revolutionary 2,000 km Hybrid Engine</div>
+                    <div class="my-2">
+                      <span class="bg-primary text-white rounded-4 px-3"><small
+                          class="fs--1 fs-1 fw-bold">2025</small></span>
+                      <span class="text-light ms-2">Automotive
+                        /BYD</span>
+                    </div>
+                    <p class="pe-md-5">
+                    </p>
+                    <a
+                      href="./blog-pages/automobile/byds-revolutionary-2000-km-Hybrid-Engine.html"
                       
                       class="btn btn-outline-primary btn-sm px-4">Read</a>
                   </div>
